# docs/swagger.json
@@ -23,6 +23,10 @@
       "name": "Auth",
       "description": "Auth operations."
     }
+     {
+      "name": "Users",
+      "description": "Operations about users/author."
+    }
   ],
   "paths": {
     "/auth/register": {
@@ -787,7 +791,356 @@
           }
         }
       }
+    },
+    "/authors": {
+"get": {
+  "tags": ["Users"],
+  "summary": "Get all users/authors",
+  "operationId": "getAllUsers",
+  "description": "Get all users",
+  "parameters": [
+    {
+      "in": "query",
+      "name": "page",
+      "schema": {
+        "type": "integer",
+        "default": 1
+      },
+      "description": "Page number for pagination",
+      "example": 1
+    },
+    {
+      "in": "query",
+      "name": "perPage",
+      "schema": {
+        "type": "integer",
+        "default": 20
+      },
+      "description": "Number of users/authors per page",
+      "example": 20
     }
+  ],
+  "responses": {
+    "200": {
+      "description": "Successfully found users!",
+      "content": {
+        "application/json": {
+          "schema": {
+            "type": "object",
+            "required": ["status", "message", "data"],
+            "properties": {
+              "status": {
+                "type": "integer",
+                "example": 200
+              },
+              "message": {
+                "type": "string",
+                "example": "Successfully found users!"
+              },
+              "data": {
+                "type": "object",
+                "required": [
+                  "users",
+                  "page",
+                  "perPage",
+                  "totalItems",
+                  "totalPages",
+                  "hasNextPage",
+                  "hasPreviousPage"
+                ],
+                "properties": {
+                  "users": {
+                    "type": "array",
+                    "items": {
+                      "$ref": "../swagger/components/schemas/users.yaml"
+                    }
+                  },
+                  "page": {
+                    "type": "integer",
+                    "example": 1
+                  },
+                  "perPage": {
+                    "type": "integer",
+                    "example": 20
+                  },
+                  "totalItems": {
+                    "type": "integer",
+                    "example": 50
+                  },
+                  "totalPages": {
+                    "type": "integer",
+                    "example": 5
+                  },
+                  "hasNextPage": {
+                    "type": "boolean",
+                    "example": false
+                  },
+                  "hasPreviousPage": {
+                    "type": "boolean",
+                    "example": true
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "404": {
+      "$ref": "../swagger/components/responses/404.yaml"
+    }
+  }
+}
+    },
+    "/authors/{id}": {
+    "get":
+{
+  "tags": ["Users"],
+  "summary": "Get user/author by id",
+  "operationId": "getUserById",
+  "description": "Get user/author by id",
+  "parameters": [
+    {
+      "in": "query",
+      "name": "id",
+      "required": true,
+      "schema": {
+        "type": "string",
+        "example": "688507eb52768403f159c9c2"
+      }
+    }
+  ],
+  "responses": {
+    "200": {
+      "description": "Successfully found user with id 688507eb52768403f159c9c2!",
+      "content": {
+        "application/json": {
+          "schema": {
+            "type": "object",
+            "required": ["status", "message", "data"],
+            "properties": {
+              "status": {
+                "type": "integer",
+                "example": 200
+              },
+              "message": {
+                "type": "string",
+                "example": "Successfully found user with id 688507eb52768403f159c9c2!"
+              },
+              "data": {
+                "$ref": "../swagger/components/schemas/users.yaml"
+              }
+            }
+          }
+        }
+      }
+    },
+    "401": {
+      "$ref": "../swagger/components/responses/401.yaml"
+    },
+    "404": {
+      "$ref": "../swagger/components/responses/404.yaml"
+    }
+  }
+}
+    },
+    "/authors/saved-articles": {
+"get":
+{
+  "tags": ["Users"],
+  "summary": "Get user's saved article",
+  "operationId": "getSavedArticlesByAuthorId",
+  "description": "Get user's saved article",
+  "security": [
+    {
+      "bearerAuth": []
+    }
+  ],
+  "parameters": [
+    {
+      "in": "path",
+      "name": "id",
+      "required": true,
+      "schema": {
+        "type": "array",
+        "items": {
+          "type": "string"
+        },
+        "example": ["68498236a100312bea078fe7", "688507eb52768403f159c9c2"]
+      }
+    }
+  ],
+  "responses": {
+    "200": {
+      "description": "Successfully found user's saved articles with id 688507eb52768403f159c9c2!",
+      "content": {
+        "application/json": {
+          "schema": {
+            "type": "object",
+            "required": ["status", "message", "data"],
+            "properties": {
+              "status": {
+                "type": "integer",
+                "example": 200
+              },
+              "message": {
+                "type": "string",
+                "example": "Successfully found user's saved articles with id 688507eb52768403f159c9c2!"
+              },
+              "data": {
+                "$ref": "../swagger/components/schemas/users.yaml"
+              }
+            }
+          }
+        }
+      }
+    },
+    "401": {
+      "$ref": "../swagger/components/responses/401.yaml"
+    },
+    "404": {
+      "$ref": "../swagger/components/responses/40.yaml"
+    }
+  }
+}
+    },
+    "/authors/saved-articles/{id}": {
+"patch:": {
+  "tags": ["Users"],
+  "summary": "Patch user's saved article by id",
+  "operationId": "saveArticleByAuthorId",
+  "description": "Update user's saved article by id",
+  "security": [
+    {
+      "bearerAuth": []
+    }
+  ],
+  "parameters": [
+    {
+      "in": "path",
+      "name": "id",
+      "required": true,
+      "schema": {
+        "type": "string",
+        "example": "688507eb52768403f159c9c2"
+      }
+    }
+  ],
+  "responses": {
+    "200": {
+      "description": "Article added to saved list!",
+      "content": {
+        "application/json": {
+          "schema": {
+            "type": "object",
+            "required": ["status", "message", "data"],
+            "properties": {
+              "status": {
+                "type": "integer",
+                "example": 200
+              },
+              "message": {
+                "type": "string",
+                "example": "Article added to saved list!"
+              },
+              "data": {
+                "$ref": "../swagger/components/schemas/users.yaml"
+              }
+            }
+          }
+        }
+      }
+    },
+    "401": {
+      "$ref": "../swagger/components/responses/401.yaml"
+    },
+    "404": {
+      "$ref": "../swagger/components/responses/404.yaml"
+    }
+  }
+},
+"delete": {
+  "tags": ["Users"],
+  "summary": "Delete user's saved article by id",
+  "operationId": "removeSavedArticleByAuthorId",
+  "description": "Delete user's saved article by id",
+  "security": [
+    {
+      "bearerAuth": []
+    }
+  ],
+  "parameters": [
+    {
+      "in": "path",
+      "name": "id",
+      "required": true,
+      "schema": {
+        "type": "string",
+        "example": "688507eb52768403f159c9c2"
+      }
+    }
+  ],
+  "responses": {
+    "204": {
+      "description": "Article removed from saved list"
+    },
+    "401": {
+      "$ref": "../swagger/components/responses/401.yaml"
+    },
+    "404": {
+      "$ref": "../swagger/components/responses/404.yaml"
+    }
+  }
+}
+    },
+    "/authors/{id}/articles": {
+"get": {
+  "tags": ["Users"],
+  "summary": "Get own articles",
+  "operationId": "getOwnArticlesByAuthorId",
+  "description": "Get own articles",
+  "parameters": [
+    {
+      "in": "query",
+      "name": "id",
+      "required": true,
+      "schema": {
+        "type": "string",
+        "example": "688507eb52768403f159c9c2"
+      }
+    }
+  ],
+  "responses": {
+    "200": {
+      "description": "Successfully found user's own articles with id 688507eb52768403f159c9c2!",
+      "content": {
+        "application/json": {
+          "schema": {
+            "type": "object",
+            "required": ["status", "message", "data"],
+            "properties": {
+              "status": {
+                "type": "integer",
+                "example": 200
+              },
+              "message": {
+                "type": "string",
+                "example": "Successfully found user's saved articles with id 688507eb52768403f159c9c2!"
+              },
+              "data": {
+                "$ref": "../swagger/components/schemas/users.yaml"
+              }
+            }
+          }
+        }
+      }
+    },
+    "404": {
+      "$ref": "../swagger/components/responses/404.yaml"
+    }
+  }
+}
+}
   },
   "components": {
     "securitySchemes": {
@@ -963,7 +1316,50 @@
             "example": "2025-07-25"
           }
         }
-      }
+      },
+      "users": {
+  "type": "object",
+  "required": [
+    "name",
+    "email",
+    "password"
+  ],
+  "properties": {
+    "_id": {
+      "description": "User's id",
+      "type": "string",
+      "example": "688507eb52768403f159c9c2"
+    },
+    "name": {
+      "description": "User's name",
+      "type": "string",
+      "example": "alicewow"
+    },
+    "email": {
+      "description": "User's email",
+      "type": "string",
+      "example": "qwerty123@gmail.com"
+    },
+    "savedArticles": {
+      "description": "Saved articles for User",
+      "type": "array",
+      "items": {
+        "type": "string"
+      },
+      "example": ["68498236a100312bea078fe7", "688507eb52768403f159c9c2"]
+    },
+    "createdAt": {
+      "description": "User's creation date",
+      "type": "string",
+      "example": "2025-07-25"
+    },
+    "updatedAt": {
+      "description": "User's change date",
+      "type": "string",
+      "example": "2025-07-25"
     }
   }
 }
+},
+    }
+  }
