# src/controllers/user.js
@@ -26,10 +26,8 @@ export const getAllUsersController = async (req, res) => {
 };
 
 export const getUserByIdController = async (req, res) => {
-  const sessionId = req.cookies.sessionId;
-  const session = await SessionsCollection.findOne({ _id: sessionId });
-  const userId = session.userId;
-  const user = await getUserById(userId);
+  const { authorsId } = req.params;
+  const user = await getUserById(authorsId);
 
   if (!user) {
     throw createHttpError(404, 'User not found');
@@ -37,7 +35,7 @@ export const getUserByIdController = async (req, res) => {
 
   res.json({
     status: 200,
-    message: `Successfully found user with id ${userId}!`,
+    message: `Successfully found user with id ${authorsId}!`,
     data: user,
   });
 };
@@ -55,23 +53,6 @@ export const getSavedArticlesByAuthorIdController = async (req, res) => {
   res.json({
     status: 200,
     message: `Successfully found user's saved articles with id ${userId}!`,
-    data: user,
-  });
-};
-
-export const getOwnArticlesByAuthorIdController = async (req, res) => {
-  const sessionId = req.cookies.sessionId;
-  const session = await SessionsCollection.findOne({ _id: sessionId });
-  const userId = session.userId;
-  const user = await getOwnArticles(userId);
-
-  if (!user) {
-    throw createHttpError(404, 'User not found');
-  }
-
-  res.json({
-    status: 200,
-    message: `Successfully found user's own articles with id ${userId}!`,
     data: user,
   });
 };
@@ -104,5 +85,20 @@ export const removeSavedArticleByAuthorIdController = async (req, res) => {
   res.json({
     status: 204,
     message: 'Article removed from saved list',
+  });
+};
+
+export const getOwnArticlesByAuthorIdController = async (req, res) => {
+  const { authorsId } = req.params;
+  const user = await getOwnArticles(authorsId);
+
+  if (!user) {
+    throw createHttpError(404, 'User not found');
+  }
+
+  res.json({
+    status: 200,
+    message: `Successfully found user's own articles with id ${authorsId}!`,
+    data: user,
   });
 };
